--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <div class="card">
 <img src="images/heart.png">
 <h2>Cool</h2>
-<p>A cool app, <strong>very cool app!</strong></p>
+<p>A cool app, <strong>very cool app!!!</strong></p>
 </div>
 
 <div class="card">
